src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__concat_idents! (parse it_matches_empty_generic_args).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<GenericArgs<Infallible>>(q.clone())"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [],
        },
    },
)
