src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__concat_idents! (parse it_matches_pathed_args).snap
---
source: src/rust/names/paths.rs
expression: "crate::parse::<GenericArgs<TypePath<P<Infallible>>>>(q.clone())"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [
                Ty(
                    HigherOrderPath {
                        leading: false,
                        segments: Interlace {
                            values: [
                                Bare(
                                    Id(
                                        Ident(
                                            hello,
                                        ),
                                    ),
                                ),
                                Bare(
                                    Id(
                                        Ident(
                                            world,
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
