src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__it_matches_empty_generic_args.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse GenericArgs<Infallible> : < >)"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [],
        },
    },
)
