src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__it_matches_lifetime_args.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse GenericArgs<Infallible> : < 'a >)"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [
                Lt(
                    LifetimeToken(
                        Ident(
                            a,
                        ),
                    ),
                ),
            ],
        },
    },
)
