src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__it_matches_multi_args.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse GenericArgs<TypePath<Infallible>> : < 'a, T, hello\n    :: world >)"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [
                Lt(
                    LifetimeToken(
                        Ident(
                            a,
                        ),
                    ),
                ),
                Ty(
                    HigherOrderPath {
                        leading: false,
                        segments: Interlace {
                            values: [
                                Bare(
                                    Id(
                                        Ident(
                                            T,
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ),
                Ty(
                    HigherOrderPath {
                        leading: false,
                        segments: Interlace {
                            values: [
                                Bare(
                                    Id(
                                        Ident(
                                            hello,
                                        ),
                                    ),
                                ),
                                Bare(
                                    Id(
                                        Ident(
                                            world,
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
