src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__it_matches_pathed_args.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse GenericArgs<TypePath<Infallible>> : < hello :: world\n    >)"
---
Ok(
    GenericArgs {
        args: Interlace {
            values: [
                Ty(
                    HigherOrderPath {
                        leading: false,
                        segments: MinLength(
                            Interlace {
                                values: [
                                    Bare(
                                        Id(
                                            Identifier(
                                                Ident(
                                                    hello,
                                                ),
                                            ),
                                        ),
                                    ),
                                    Bare(
                                        Id(
                                            Identifier(
                                                Ident(
                                                    world,
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
