src/rust/names/snapshots/syn_state_machine__rust__names__paths__generic_tests__it_matches_typed_args.snap
---
source: src/rust/names/paths.rs
expression: "insta_match_test!(+ parse GenericArgs<Ident> : < T >)"
---
Ok(
    GenericArgs(
        Interlace {
            values: [
                Ty(
                    Ident(
                        T,
                    ),
                ),
            ],
        },
    ),
)
